--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,7 @@
       "email": "rarex.dew@gmail.com"
     }
   ],
-  "require": {
-    "php": "^7.1.3"
-  },
+  "require": {},
   "require-dev": {},
   "autoload": {
     "psr-4": {
